fixed overlapping icon

--- a/public/assets/styles/index.scss
+++ b/public/assets/styles/index.scss
@@ -372,6 +372,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  z-index: 10;
 
   @media(min-width: 750px) {
     width: 400px;
